# 3p-libndofdev

./: BuildParams  autobuild.xml  build-cmd.sh
.github/workflows/: build.yaml
libndofdev/: CMakeLists.txt  COPYING  README
libndofdev/src/: CMakeLists.txt  libndofdev.sln  libndofdev.vcproj  libndofdev.vcxproj  libndofdev.vcxproj.filters  ndofdev.c  ndofdev_external.h  ndofdev_hidutils.c  ndofdev_hidutils.h  ndofdev_hidutils_err.c  ndofdev_hidutils_err.h  ndofdev_internal.h  ndofdev_internal_win.h  ndofdev_linux.c  ndofdev_osx.c  ndofdev_unittests.c  ndofdev_win.cpp  unit_tests.vcproj  unit_tests.vcxproj  unit_tests.vcxproj.filters  unittests.c
ndofdev/: README
ndofdev/src/: libndofdev.sdf  ndofdev_hidutils_err.c  ndofdev_internal_linux.h  ndofdev_internal_osx.h  ndofdev_linux.c  ndofdev_win.cpp  unit_tests.vcxproj.filters
